2007-09-15  Peter Bloomfield

	* src/main-window.c:
	* src/main-window.h:
	* src/message-window.c: (message_window_new):  build
	  --without-gtkhtml.
	* src/sendmsg-window.c: (sendmsg_window_new):
	* src/toolbar-factory.c: (tm_changed_cb), (tm_toolbar_weak_notify),
	(balsa_toolbar_new):
	* src/toolbar-prefs.c: (customize_dialog_cb): clean up ui-manager
	  object-ref management.

2007-09-14  Peter Bloomfield

	* src/main-window.c:
	* src/message-window.c:
	* src/sendmsg-window.c:
	* src/toolbar-factory.c:
	* src/toolbar-factory.h:
	* src/toolbar-prefs.c: move toolbar-model's "changed" signal
	handling to toolbar-factory.c.

2007-09-14  Peter Bloomfield

	* doc/C/balsa.xml: toolbar editing is now really instant-apply.
	* libbalsa/rfc3156.c: build (--without-ssl ?).
	* src/ab-window.c:
	* src/balsa-app.c:
	* src/balsa-bonobo.c:
	* src/balsa-index.c:
	* src/balsa-index.h:
	* src/balsa-mime-widget-message.c:
	* src/balsa-mime-widget-text.c: drop GtkWidget from argument list.
	* src/main.c: GtkAccelMap is now in ~/.balsa/accelmap.
	* src/pref-manager.c: (apply_prefs): new toolbar api.
	* src/save-restore.c: (config_global_load): notify user about changes.
	* src/main-window.c:
	* src/main-window.h:
	* src/message-window.c:
	* src/message-window.h:
	* src/sendmsg-window.c:
	* src/sendmsg-window.h:
	* src/toolbar-factory.c:
	* src/toolbar-factory.h:
	* src/toolbar-prefs.c: migrate from GnomeUI to GtkUIManager.

2007-09-08  Albrecht Dreß

	* src/sendmsg-window.c: allow the user to select message parts to
	be quoted in the response.

2007-09-07  Pawel Salek

	* libbalsa/imap/imap-handle.c: fix buffer overflow (#474366,
	credit goes to Evil Ninja Squirrel).
	* NEWS, configure.in: release 2.3.20.

2007-09-06  Pawel Salek

	* libbalsa/mailbox_imap.c: handle expunge race.

2007-09-04  Peter Bloomfield

	* src/main-window.c: (balsa_window_enable_mailbox_menus),
	(balsa_window_update_book_menus), (enable_message_menus): manage