@@ -314,24 +314,24 @@ balsa_quit_nicely(GtkAction * action, gpointer data)
 /* Actions that are always sensitive: */
 static const GtkActionEntry entries[] = {
     /* Menus */
-    {"FileMenu", NULL, "_File"},
-    {"EditMenu", NULL, "_Edit"},
-    {"ViewMenu", NULL, "_View"},
-    {"MailboxMenu", NULL, "Mail_box"},
-    {"MessageMenu", NULL, "_Message"},
-    {"SettingsMenu", NULL, "_Settings"},
-    {"HelpMenu", NULL, "_Help"},
+    {"FileMenu", NULL, N_("_File")},
+    {"EditMenu", NULL, N_("_Edit")},
+    {"ViewMenu", NULL, N_("_View")},
+    {"MailboxMenu", NULL, N_("Mail_box")},
+    {"MessageMenu", NULL, N_("_Message")},
+    {"SettingsMenu", NULL, N_("_Settings")},
+    {"HelpMenu", NULL, N_("_Help")},
 #if !defined(ENABLE_TOUCH_UI)
-    {"FileNewMenu", NULL, "_New"},
+    {"FileNewMenu", NULL, N_("_New")},
 #else  /* ENABLE_TOUCH_UI */
-    {"MailboxesMenu", NULL, "Mail_boxes"},
-    {"ViewMoreMenu", NULL, "_More"},
-    {"ShownHeadersMenu", NULL, "_Headers"},
-    {"SortMenu", NULL, "_Sort Mailbox"},
-    {"HideMessagesMenu", NULL, "H_ide messages"},
-    {"MessageMoreMenu", NULL, "_More"},
-    {"ToolsMenu", NULL, "_Tools"},
-    {"ToolsFiltersMenu", NULL, "_Filters"},
+    {"MailboxesMenu", NULL, N_("Mail_boxes")},
+    {"ViewMoreMenu", NULL, N_("_More")},
+    {"ShownHeadersMenu", NULL, N_("_Headers")},
+    {"SortMenu", NULL, N_("_Sort Mailbox")},
+    {"HideMessagesMenu", NULL, N_("H_ide messages")},
+    {"MessageMoreMenu", NULL, N_("_More")},
+    {"ToolsMenu", NULL, N_("_Tools")},
+    {"ToolsFiltersMenu", NULL, N_("_Filters")},
     {"ManageFilters", GTK_STOCK_PROPERTIES, N_("F_ilters"), NULL,
      N_("Manage filters"), G_CALLBACK(filter_dlg_cb)},
 #endif /* ENABLE_TOUCH_UI */
